# distance_transform_benchmarks

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/: CMakeLists.txt  distance_transform.cpp  immersion.cpp  level_lines_distance_transform.cpp
dt/: CMakeLists.txt
dt/include/: propagation.hpp
dt/include/dt/: block_priority.hpp  border.hpp  c4.hpp  c8.hpp  fill.hpp  generalised_distance_transform.hpp  geodesic_distance_transform.hpp  image2d.hpp  image2d_view.hpp  image_view.hpp  immersion.hpp  imprint.hpp  imread.hpp  imsave.hpp  inferno.hpp  invert_mask.hpp  iterative_distance_transform.hpp  level_lines_distance_transform.hpp  normalize.hpp  point2d.hpp  priority.hpp  propagation.hpp  random_image2d.hpp  rgb.hpp  transfert.hpp
dt/include/dt/details/: image2d_data.hpp  image2d_data_cpu.hpp  image2d_data_gpu.hpp
dt/include/dt/structures/: circular_bucket_queue.hpp
dt/src/: bitset.cuh  block_priority.cu  circular_bucket_queue.cpp  dt_block_passes.cuh  generalised_distance_transform.cu  generalised_distance_transform_blocks.cu  generalised_distance_transform_chessboard.cu  generalised_distance_transform_task.cu  geodesic_distance_transform.cu  geodesic_distance_transform_chessboard.cu  geodesic_distance_transform_task.cu  image2d_data.cpp  image2d_view.cpp  image_view.cpp  immersion.cu  imprint.cpp  imread.cpp  imsave.cpp  inferno.cpp  invert_mask.cpp  level_lines_distance_transform_chessboard.cu  level_lines_distance_transform_fg.cu  level_lines_distance_transform_task_priority.cu  lldt_block_passes.cuh  point2d.cpp  task_queue.cu  task_queue.cuh  transfert.cpp  utils.cu  utils.cuh
python/cxx/: CMakeLists.txt  level_lines_distance_transform.cpp  level_lines_distance_transform.hpp  module.cpp
python/dt/: __init__.py
results/: benchmark_analysis.ipynb  benchmark_results.json  pyproject.toml
src/: main.cpp
tests/: CMakeLists.txt  border.cpp  c4.cpp  circular_bucket_queue.cpp  distance_transform.cpp  helpers.hpp  image2d.cpp  image_view.cpp  immersion.cpp  io.cpp  level_lines_distance_transform.cpp  level_lines_distance_transform_gpu.cpp  rgb8.cpp  transfert.cpp
