[project]
name = "dt"
version = "0.1"
authors = [{ name = "Baptiste Esteban", email = "baptiste.esteban@epita.fr" }]
dependencies = ["torch>2"]
requires-python = ">=3.14"

[dependency-groups]
dev = ["notebook==7.4.7"]

[build-system]
requires = ["pybind11", "scikit-build-core", "torch>2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/dt"]

[tool.scikit-build.cmake.define]
BUILD_PYTHON = "ON"
BUILD_TESTING = "OFF"
