find_package(benchmark REQUIRED)

add_executable(bench_immersion immersion.cpp)
target_link_libraries(bench_immersion PRIVATE dt::core benchmark::benchmark_main)

add_executable(bench_level_lines_distance_transform level_lines_distance_transform.cpp)
target_link_libraries(bench_level_lines_distance_transform PRIVATE dt::core benchmark::benchmark_main)

add_executable(bench_distance_transform distance_transform.cpp)
target_link_libraries(bench_distance_transform PRIVATE dt::core benchmark::benchmark_main)