find_package(GTest REQUIRED)

function(my_add_test name)
    add_executable(test_${name} "${name}.cpp")
    target_link_libraries(test_${name} PRIVATE GTest::gtest_main dt)
    add_test(NAME test_${name} COMMAND test_${name})
endfunction()

my_add_test(image_view)
my_add_test(image2d)
my_add_test(circular_bucket_queue)
my_add_test(immersion)
my_add_test(border)
my_add_test(c4)
my_add_test(io)
my_add_test(rgb8)